--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -213,6 +213,7 @@
     <Content Include="index.htm" />
     <Content Include="js\jquery-1.4.2.min.js" />
     <Content Include="js\jquery-ui-1.8.5.custom.min.js" />
+    <Content Include="js\Safari3AjaxHack.js" />
     <Content Include="Login.aspx" />
     <Content Include="Main.Master" />
     <Content Include="Tema.aspx" />
