--- a/LeComCre.Web/Afonsoft.Libary.Data/Afonsoft.Libary.Data.csproj
+++ b/LeComCre.Web/Afonsoft.Libary.Data/Afonsoft.Libary.Data.csproj
@@ -76,6 +76,9 @@
     <Content Include="Referencias\MySql.Data.dll" />
     <Content Include="Referencias\System.Data.OracleClient.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Data.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
