--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -15,10 +15,15 @@
 	</configSections>
 	<appSettings>
 		<clear/>
-		<!-- CONFIGURAÇÃO DO PROVIDER E DA STRING DA CONEXÃO -->
+		<!-- Configuração do Provider e da String-->
 		<add key="Conexao" value="Server=www.afonsoft.com;Database=LeComCre_db;Uid=lecomcre;Pwd=tcm2010;default command timeout=300;"/>
 		<add key="Provider" value="MySQL"/>
-		<!-- FIM DA CONFIGURAÇÃO DA CONEXÃO -->
+		<!-- Fim Conexãoo -->
+    <!-- Configuração do E-Mail -->
+    <add key="smtpServer" value="smtp.afonsoft.com" />
+    <add key="smtpUser" value="lecomcre@afonsoft.com" />
+    <add key="smtpPass" value="123123" />
+    <!-- Fim do E-Mail -->
 	</appSettings>
 	<connectionStrings/>
 	<system.web>
