--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -20,9 +20,10 @@
 		<add key="Provider" value="MySQL"/>
 		<!-- Fim Conexãoo -->
     <!-- Configuração do E-Mail -->
-    <add key="smtpServer" value="smtp.afonsoft.com" />
+    <add key="smtpServer" value="mail.afonsoft.com" />
     <add key="smtpUser" value="lecomcre@afonsoft.com" />
     <add key="smtpPass" value="123123" />
+    <add key="DisplayName" value="Lé Com Cré - Email de Suporte"/>
     <!-- Fim do E-Mail -->
 	</appSettings>
 	<connectionStrings/>
