--- a/LeComCre.Web/Afonsoft.Libary.Data/Afonsoft.Libary.Data.csproj
+++ b/LeComCre.Web/Afonsoft.Libary.Data/Afonsoft.Libary.Data.csproj
@@ -47,9 +47,7 @@
     <Reference Include="System.Data.OracleClient, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -75,6 +73,7 @@
   <ItemGroup>
     <Content Include="Referencias\MySql.Data.dll" />
     <Content Include="Referencias\System.Data.OracleClient.dll" />
+    <Content Include="Referencias\System.Data.SQLite.dll" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Data.cd" />
