--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -205,8 +205,10 @@
     <Content Include="Cadastrar.aspx" />
     <Content Include="CadUsuario.aspx" />
     <Content Include="email.aspx" />
+    <Content Include="images\Calendario.gif" />
     <Content Include="images\negado.jpg" />
     <Content Include="index.htm" />
+    <Content Include="js\jquery.maskedinput.js" />
     <Content Include="js\Safari3AjaxHack.js" />
     <Content Include="Login.aspx" />
     <Content Include="Main.Master" />
