--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -206,9 +206,11 @@
     <Content Include="CadUsuario.aspx" />
     <Content Include="email.aspx" />
     <Content Include="images\Calendario.gif" />
+    <Content Include="images\Check.png" />
     <Content Include="images\negado.jpg" />
     <Content Include="index.htm" />
     <Content Include="js\jquery.maskedinput.js" />
+    <Content Include="js\jquery.ValidCPF.js" />
     <Content Include="js\Safari3AjaxHack.js" />
     <Content Include="Login.aspx" />
     <Content Include="Main.Master" />
