--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -149,6 +149,13 @@
     <Compile Include="NovoAssunto.aspx.designer.cs">
       <DependentUpon>NovoAssunto.aspx</DependentUpon>
     </Compile>
+    <Compile Include="RecuperarSenha.aspx.cs">
+      <DependentUpon>RecuperarSenha.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RecuperarSenha.aspx.designer.cs">
+      <DependentUpon>RecuperarSenha.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Temas.aspx.cs">
       <DependentUpon>Temas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -261,6 +268,7 @@
     <Content Include="js\Safari3AjaxHack.js" />
     <Content Include="Login.aspx" />
     <Content Include="NovoAssunto.aspx" />
+    <Content Include="RecuperarSenha.aspx" />
     <Content Include="References\AjaxControlToolkit.dll" />
     <Content Include="References\ar\AjaxControlToolkit.resources.dll" />
     <Content Include="References\cs\AjaxControlToolkit.resources.dll" />
