--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -260,6 +260,7 @@
     <Content Include="email.aspx" />
     <Content Include="images\Calendario.png" />
     <Content Include="images\Check.png" />
+    <Content Include="images\Edit_Text.png" />
     <Content Include="images\negado.jpg" />
     <Content Include="index.html" />
     <Content Include="InfoAssunto.aspx" />
