--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="AjaxControlToolkit, Version=3.5.40412.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL" />
     <Reference Include="AjaxControlToolkit.resources, Version=3.5.40412.0, Culture=pt, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL" />
+    <Reference Include="FlashControl, Version=2.4.2276.31815, Culture=neutral, PublicKeyToken=0066be59ecd613cb, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data, Version=6.2.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\Afonsoft.Libary.Data\Referencias\MySql.Data.dll</HintPath>
@@ -312,6 +313,7 @@
     <Content Include="References\cs\AjaxControlToolkit.resources.dll" />
     <Content Include="References\de\AjaxControlToolkit.resources.dll" />
     <Content Include="References\es\AjaxControlToolkit.resources.dll" />
+    <Content Include="References\FlashControl.dll" />
     <Content Include="References\fr\AjaxControlToolkit.resources.dll" />
     <Content Include="References\he\AjaxControlToolkit.resources.dll" />
     <Content Include="References\hi\AjaxControlToolkit.resources.dll" />
