--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -142,6 +142,13 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Menu.master.cs">
+      <DependentUpon>Menu.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Menu.master.designer.cs">
+      <DependentUpon>Menu.master</DependentUpon>
+    </Compile>
     <Compile Include="Negocios\Aplicativos.cs" />
     <Compile Include="Negocios\Mail.cs" />
     <Compile Include="NovoAssunto.aspx.cs">
@@ -335,6 +342,44 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Diagram\web.cd" />
+    <Content Include="images\master_r10_c1.png" />
+    <Content Include="images\master_r10_c15.png" />
+    <Content Include="images\master_r10_c2.png" />
+    <Content Include="images\master_r10_c6.png" />
+    <Content Include="images\master_r10_c7.png" />
+    <Content Include="images\master_r1_c1.png" />
+    <Content Include="images\master_r1_c7.png" />
+    <Content Include="images\master_r2_c10.png" />
+    <Content Include="images\master_r2_c12.png" />
+    <Content Include="images\master_r2_c14.png" />
+    <Content Include="images\master_r2_c7.png" />
+    <Content Include="images\master_r3_c7.png" />
+    <Content Include="images\master_r4_c1.png" />
+    <Content Include="images\master_r4_c11.png" />
+    <Content Include="images\master_r4_c13.png" />
+    <Content Include="images\master_r4_c5.png" />
+    <Content Include="images\master_r4_c8.png" />
+    <Content Include="images\master_r4_c9.png" />
+    <Content Include="images\master_r5_c1.png" />
+    <Content Include="images\master_r5_c11.png" />
+    <Content Include="images\master_r5_c8.png" />
+    <Content Include="images\master_r6_c1.png" />
+    <Content Include="images\master_r6_c16.png" />
+    <Content Include="images\master_r6_c3.png" />
+    <Content Include="images\master_r7_c1.png" />
+    <Content Include="images\master_r7_c15.png" />
+    <Content Include="images\master_r7_c4.png" />
+    <Content Include="images\master_r7_c6.png" />
+    <Content Include="images\master_r7_c7.png" />
+    <Content Include="images\master_r8_c1.png" />
+    <Content Include="images\master_r8_c15.png" />
+    <Content Include="images\master_r8_c2.png" />
+    <Content Include="images\master_r8_c6.png" />
+    <Content Include="images\master_r8_c7.png" />
+    <Content Include="images\master_r9_c1.png" />
+    <Content Include="images\master_r9_c15.png" />
+    <Content Include="images\master_r9_c6.png" />
+    <Content Include="Menu.master" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
