--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -372,6 +372,7 @@
     <None Include="Diagram\web.cd" />
     <Content Include="acessebilidade.aspx" />
     <Content Include="Colorir.aspx" />
+    <Content Include="images\Buscar.png" />
     <Content Include="images\master_r10_c1.png" />
     <Content Include="images\master_r10_c15.png" />
     <Content Include="images\master_r10_c2.png" />
