--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -28,7 +28,8 @@
 	</appSettings>
 	<connectionStrings/>
 	<system.web>
-		<globalization culture="pt-BR"/>
+    <customErrors mode="Off"/>
+    <globalization culture="pt-BR"/>
 		<trace enabled="true" pageOutput="false" traceMode="SortByTime" localOnly="false"/>
 		<compilation debug="true">
 			<assemblies>
