--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -16,7 +16,7 @@
 	<appSettings>
 		<clear/>
 		<!-- Configuração do Provider e da String-->
-		<add key="Conexao" value="Server=www.afonsoft.com;Database=LeComCre_db;Uid=lecomcre;Pwd=tcm2010;default command timeout=300;"/>
+		<add key="Conexao" value="Server=www.afonsoft.com;Database=LeComCre_db;Uid=lecomcre;Pwd=tcm2010;default command timeout=300;Allow Zero Datetime=True;"/>
 		<add key="Provider" value="MySQL"/>
 		<!-- Fim Conexãoo -->
     <!-- Configuração do E-Mail -->
