--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -82,7 +82,6 @@
     <Content Include="images\fileText.jpg" />
     <Content Include="images\fileunknown.jpg" />
     <Content Include="images\folder.gif" />
-    <Content Include="images\large_folder.gif" />
     <Content Include="images\minus.gif" />
     <Content Include="images\pdf.gif" />
     <Content Include="images\plus.gif" />
@@ -162,6 +161,13 @@
     </Compile>
     <Compile Include="jogos.aspx.designer.cs">
       <DependentUpon>jogos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MasterForum.master.cs">
+      <DependentUpon>MasterForum.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterForum.master.designer.cs">
+      <DependentUpon>MasterForum.master</DependentUpon>
     </Compile>
     <Compile Include="MenuDefault.master.cs">
       <DependentUpon>MenuDefault.master</DependentUpon>
@@ -301,37 +307,6 @@
     <Content Include="images\Check.png" />
     <Content Include="images\Edit_Text.png" />
     <Content Include="images\ExcluirUser.png" />
-    <Content Include="images\fundo.png" />
-    <Content Include="images\home_page_r10_c2.png" />
-    <Content Include="images\home_page_r11_c11.png" />
-    <Content Include="images\home_page_r11_c6.png" />
-    <Content Include="images\home_page_r12_c2.png" />
-    <Content Include="images\home_page_r13_c6.png" />
-    <Content Include="images\home_page_r14_c2.png" />
-    <Content Include="images\home_page_r1_c1.png" />
-    <Content Include="images\home_page_r1_c7.png" />
-    <Content Include="images\home_page_r2_c10.png" />
-    <Content Include="images\home_page_r2_c13.png" />
-    <Content Include="images\home_page_r2_c15.png" />
-    <Content Include="images\home_page_r2_c7.png" />
-    <Content Include="images\home_page_r3_c7.png" />
-    <Content Include="images\home_page_r4_c1.png" />
-    <Content Include="images\home_page_r4_c12.png" />
-    <Content Include="images\home_page_r4_c14.png" />
-    <Content Include="images\home_page_r4_c4.png" />
-    <Content Include="images\home_page_r4_c8.png" />
-    <Content Include="images\home_page_r4_c9.png" />
-    <Content Include="images\home_page_r5_c1.png" />
-    <Content Include="images\home_page_r5_c2.png" />
-    <Content Include="images\home_page_r5_c5.png" />
-    <Content Include="images\home_page_r6_c11.png" />
-    <Content Include="images\home_page_r6_c16.png" />
-    <Content Include="images\home_page_r6_c5.png" />
-    <Content Include="images\home_page_r6_c6.png" />
-    <Content Include="images\home_page_r7_c2.png" />
-    <Content Include="images\home_page_r8_c2.png" />
-    <Content Include="images\home_page_r9_c11.png" />
-    <Content Include="images\home_page_r9_c6.png" />
     <Content Include="images\negado.jpg" />
     <Content Include="images\spacer.gif" />
     <Content Include="images\View_text.png" />
@@ -370,46 +345,55 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Diagram\web.cd" />
+    <Content Include="images\forum_r10_c1.gif" />
+    <Content Include="images\forum_r10_c21.gif" />
+    <Content Include="images\forum_r10_c3.gif" />
+    <Content Include="images\forum_r11_c1.gif" />
+    <Content Include="images\forum_r11_c21.gif" />
+    <Content Include="images\forum_r12_c1.gif" />
+    <Content Include="images\forum_r12_c13.gif" />
+    <Content Include="images\forum_r12_c18.gif" />
+    <Content Include="images\forum_r12_c21.gif" />
+    <Content Include="images\forum_r12_c3.gif" />
+    <Content Include="images\forum_r12_c8.gif" />
+    <Content Include="images\forum_r1_c1.gif" />
+    <Content Include="images\forum_r2_c1.gif" />
+    <Content Include="images\forum_r2_c13.gif" />
+    <Content Include="images\forum_r2_c14.gif" />
+    <Content Include="images\forum_r2_c17.gif" />
+    <Content Include="images\forum_r2_c20.gif" />
+    <Content Include="images\forum_r2_c23.gif" />
+    <Content Include="images\forum_r2_c7.gif" />
+    <Content Include="images\forum_r3_c13.gif" />
+    <Content Include="images\forum_r3_c7.gif" />
+    <Content Include="images\forum_r4_c1.gif" />
+    <Content Include="images\forum_r5_c1.gif" />
+    <Content Include="images\forum_r5_c10.gif" />
+    <Content Include="images\forum_r5_c11.gif" />
+    <Content Include="images\forum_r5_c12.gif" />
+    <Content Include="images\forum_r5_c13.gif" />
+    <Content Include="images\forum_r5_c15.gif" />
+    <Content Include="images\forum_r5_c16.gif" />
+    <Content Include="images\forum_r5_c18.gif" />
+    <Content Include="images\forum_r5_c6.gif" />
+    <Content Include="images\forum_r6_c1.gif" />
+    <Content Include="images\forum_r6_c2.gif" />
+    <Content Include="images\forum_r6_c5.gif" />
+    <Content Include="images\forum_r7_c18.gif" />
+    <Content Include="images\forum_r7_c19.gif" />
+    <Content Include="images\forum_r7_c22.gif" />
+    <Content Include="images\forum_r8_c2.gif" />
+    <Content Include="images\forum_r9_c1.gif" />
+    <Content Include="images\forum_r9_c13.gif" />
+    <Content Include="images\forum_r9_c18.gif" />
+    <Content Include="images\forum_r9_c21.gif" />
+    <Content Include="images\forum_r9_c4.gif" />
+    <Content Include="images\forum_r9_c8.gif" />
+    <Content Include="images\forum_r9_c9.gif" />
+    <Content Include="MasterForum.master" />
     <Content Include="acessebilidade.aspx" />
     <Content Include="Colorir.aspx" />
     <Content Include="images\Buscar.png" />
-    <Content Include="images\master_r10_c1.png" />
-    <Content Include="images\master_r10_c15.png" />
-    <Content Include="images\master_r10_c2.png" />
-    <Content Include="images\master_r10_c6.png" />
-    <Content Include="images\master_r10_c7.png" />
-    <Content Include="images\master_r1_c1.png" />
-    <Content Include="images\master_r1_c7.png" />
-    <Content Include="images\master_r2_c10.png" />
-    <Content Include="images\master_r2_c12.png" />
-    <Content Include="images\master_r2_c14.png" />
-    <Content Include="images\master_r2_c7.png" />
-    <Content Include="images\master_r3_c7.png" />
-    <Content Include="images\master_r4_c1.png" />
-    <Content Include="images\master_r4_c11.png" />
-    <Content Include="images\master_r4_c13.png" />
-    <Content Include="images\master_r4_c5.png" />
-    <Content Include="images\master_r4_c8.png" />
-    <Content Include="images\master_r4_c9.png" />
-    <Content Include="images\master_r5_c1.png" />
-    <Content Include="images\master_r5_c11.png" />
-    <Content Include="images\master_r5_c8.png" />
-    <Content Include="images\master_r6_c1.png" />
-    <Content Include="images\master_r6_c16.png" />
-    <Content Include="images\master_r6_c3.png" />
-    <Content Include="images\master_r7_c1.png" />
-    <Content Include="images\master_r7_c15.png" />
-    <Content Include="images\master_r7_c4.png" />
-    <Content Include="images\master_r7_c6.png" />
-    <Content Include="images\master_r7_c7.png" />
-    <Content Include="images\master_r8_c1.png" />
-    <Content Include="images\master_r8_c15.png" />
-    <Content Include="images\master_r8_c2.png" />
-    <Content Include="images\master_r8_c6.png" />
-    <Content Include="images\master_r8_c7.png" />
-    <Content Include="images\master_r9_c1.png" />
-    <Content Include="images\master_r9_c15.png" />
-    <Content Include="images\master_r9_c6.png" />
     <Content Include="images\printImage.png" />
     <Content Include="images\printImage2.png" />
     <Content Include="images\printImage3.png" />
