--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -401,6 +401,52 @@
     <Content Include="images\cadastre-se_r9_c4.gif" />
     <Content Include="images\cadastre-se_r9_c8.gif" />
     <Content Include="images\cadastre-se_r9_c9.gif" />
+    <Content Include="images\home_r10_c15.gif" />
+    <Content Include="images\home_r10_c7.gif" />
+    <Content Include="images\home_r11_c2.gif" />
+    <Content Include="images\home_r12_c2.gif" />
+    <Content Include="images\home_r13_c15.gif" />
+    <Content Include="images\home_r13_c7.gif" />
+    <Content Include="images\home_r14_c2.gif" />
+    <Content Include="images\home_r15_c2.gif" />
+    <Content Include="images\home_r16_c15.gif" />
+    <Content Include="images\home_r16_c7.gif" />
+    <Content Include="images\home_r16_c8.gif" />
+    <Content Include="images\home_r17_c2.gif" />
+    <Content Include="images\home_r18_c2.gif" />
+    <Content Include="images\home_r19_c15.gif" />
+    <Content Include="images\home_r19_c8.gif" />
+    <Content Include="images\home_r1_c1.gif" />
+    <Content Include="images\home_r20_c2.gif" />
+    <Content Include="images\home_r2_c1.gif" />
+    <Content Include="images\home_r2_c12.gif" />
+    <Content Include="images\home_r2_c13.gif" />
+    <Content Include="images\home_r2_c17.gif" />
+    <Content Include="images\home_r2_c20.gif" />
+    <Content Include="images\home_r2_c22.gif" />
+    <Content Include="images\home_r2_c6.gif" />
+    <Content Include="images\home_r3_c12.gif" />
+    <Content Include="images\home_r3_c6.gif" />
+    <Content Include="images\home_r4_c1.gif" />
+    <Content Include="images\home_r4_c2.gif" />
+    <Content Include="images\home_r5_c10.gif" />
+    <Content Include="images\home_r5_c11.gif" />
+    <Content Include="images\home_r5_c12.gif" />
+    <Content Include="images\home_r5_c14.gif" />
+    <Content Include="images\home_r5_c16.gif" />
+    <Content Include="images\home_r5_c18.gif" />
+    <Content Include="images\home_r5_c2.gif" />
+    <Content Include="images\home_r5_c5.gif" />
+    <Content Include="images\home_r5_c9.gif" />
+    <Content Include="images\home_r6_c2.gif" />
+    <Content Include="images\home_r6_c3.gif" />
+    <Content Include="images\home_r6_c4.gif" />
+    <Content Include="images\home_r7_c18.gif" />
+    <Content Include="images\home_r7_c19.gif" />
+    <Content Include="images\home_r7_c21.gif" />
+    <Content Include="images\home_r8_c3.gif" />
+    <Content Include="images\home_r9_c2.gif" />
+    <Content Include="images\home_r9_c7.gif" />
     <Content Include="MasterCadastro.master" />
     <Content Include="images\forum_r10_c1.gif" />
     <Content Include="images\forum_r10_c21.gif" />
