--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -169,6 +169,13 @@
     <Compile Include="MasterCadastro.master.designer.cs">
       <DependentUpon>MasterCadastro.master</DependentUpon>
     </Compile>
+    <Compile Include="MasterColorir.master.cs">
+      <DependentUpon>MasterColorir.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterColorir.master.designer.cs">
+      <DependentUpon>MasterColorir.master</DependentUpon>
+    </Compile>
     <Compile Include="MasterForum.master.cs">
       <DependentUpon>MasterForum.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -366,6 +373,55 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Diagram\web.cd" />
+    <Content Include="images\colorir_r10_c1.gif" />
+    <Content Include="images\colorir_r10_c21.gif" />
+    <Content Include="images\colorir_r10_c3.gif" />
+    <Content Include="images\colorir_r10_c8.gif" />
+    <Content Include="images\colorir_r10_c9.gif" />
+    <Content Include="images\colorir_r11_c1.gif" />
+    <Content Include="images\colorir_r11_c21.gif" />
+    <Content Include="images\colorir_r11_c8.gif" />
+    <Content Include="images\colorir_r12_c1.gif" />
+    <Content Include="images\colorir_r12_c13.gif" />
+    <Content Include="images\colorir_r12_c18.gif" />
+    <Content Include="images\colorir_r12_c21.gif" />
+    <Content Include="images\colorir_r12_c3.gif" />
+    <Content Include="images\colorir_r12_c8.gif" />
+    <Content Include="images\colorir_r1_c1.gif" />
+    <Content Include="images\colorir_r2_c1.gif" />
+    <Content Include="images\colorir_r2_c13.gif" />
+    <Content Include="images\colorir_r2_c14.gif" />
+    <Content Include="images\colorir_r2_c17.gif" />
+    <Content Include="images\colorir_r2_c20.gif" />
+    <Content Include="images\colorir_r2_c23.gif" />
+    <Content Include="images\colorir_r2_c7.gif" />
+    <Content Include="images\colorir_r3_c13.gif" />
+    <Content Include="images\colorir_r3_c7.gif" />
+    <Content Include="images\colorir_r4_c1.gif" />
+    <Content Include="images\colorir_r5_c1.gif" />
+    <Content Include="images\colorir_r5_c10.gif" />
+    <Content Include="images\colorir_r5_c11.gif" />
+    <Content Include="images\colorir_r5_c12.gif" />
+    <Content Include="images\colorir_r5_c13.gif" />
+    <Content Include="images\colorir_r5_c15.gif" />
+    <Content Include="images\colorir_r5_c16.gif" />
+    <Content Include="images\colorir_r5_c18.gif" />
+    <Content Include="images\colorir_r5_c6.gif" />
+    <Content Include="images\colorir_r6_c1.gif" />
+    <Content Include="images\colorir_r6_c2.gif" />
+    <Content Include="images\colorir_r6_c5.gif" />
+    <Content Include="images\colorir_r7_c18.gif" />
+    <Content Include="images\colorir_r7_c19.gif" />
+    <Content Include="images\colorir_r7_c22.gif" />
+    <Content Include="images\colorir_r8_c2.gif" />
+    <Content Include="images\colorir_r9_c1.gif" />
+    <Content Include="images\colorir_r9_c13.gif" />
+    <Content Include="images\colorir_r9_c18.gif" />
+    <Content Include="images\colorir_r9_c21.gif" />
+    <Content Include="images\colorir_r9_c4.gif" />
+    <Content Include="images\colorir_r9_c8.gif" />
+    <Content Include="images\colorir_r9_c9.gif" />
+    <Content Include="MasterColorir.master" />
     <Content Include="images\jogos_r10_c1.gif" />
     <Content Include="images\jogos_r10_c21.gif" />
     <Content Include="images\jogos_r10_c3.gif" />
