--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -197,6 +197,13 @@
     <Compile Include="MasterLogin.master.designer.cs">
       <DependentUpon>MasterLogin.master</DependentUpon>
     </Compile>
+    <Compile Include="MasterNegado.master.cs">
+      <DependentUpon>MasterNegado.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterNegado.master.designer.cs">
+      <DependentUpon>MasterNegado.master</DependentUpon>
+    </Compile>
     <Compile Include="MasterTemas.master.cs">
       <DependentUpon>MasterTemas.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -380,6 +387,52 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Diagram\web.cd" />
+    <Content Include="images\negado_r10_c1.gif" />
+    <Content Include="images\negado_r10_c21.gif" />
+    <Content Include="images\negado_r10_c3.gif" />
+    <Content Include="images\negado_r11_c1.gif" />
+    <Content Include="images\negado_r11_c21.gif" />
+    <Content Include="images\negado_r12_c1.gif" />
+    <Content Include="images\negado_r12_c13.gif" />
+    <Content Include="images\negado_r12_c18.gif" />
+    <Content Include="images\negado_r12_c21.gif" />
+    <Content Include="images\negado_r12_c3.gif" />
+    <Content Include="images\negado_r12_c8.gif" />
+    <Content Include="images\negado_r1_c1.gif" />
+    <Content Include="images\negado_r2_c1.gif" />
+    <Content Include="images\negado_r2_c13.gif" />
+    <Content Include="images\negado_r2_c14.gif" />
+    <Content Include="images\negado_r2_c17.gif" />
+    <Content Include="images\negado_r2_c20.gif" />
+    <Content Include="images\negado_r2_c23.gif" />
+    <Content Include="images\negado_r2_c7.gif" />
+    <Content Include="images\negado_r3_c13.gif" />
+    <Content Include="images\negado_r3_c7.gif" />
+    <Content Include="images\negado_r4_c1.gif" />
+    <Content Include="images\negado_r5_c1.gif" />
+    <Content Include="images\negado_r5_c10.gif" />
+    <Content Include="images\negado_r5_c11.gif" />
+    <Content Include="images\negado_r5_c12.gif" />
+    <Content Include="images\negado_r5_c13.gif" />
+    <Content Include="images\negado_r5_c15.gif" />
+    <Content Include="images\negado_r5_c16.gif" />
+    <Content Include="images\negado_r5_c18.gif" />
+    <Content Include="images\negado_r5_c6.gif" />
+    <Content Include="images\negado_r6_c1.gif" />
+    <Content Include="images\negado_r6_c2.gif" />
+    <Content Include="images\negado_r6_c5.gif" />
+    <Content Include="images\negado_r7_c18.gif" />
+    <Content Include="images\negado_r7_c19.gif" />
+    <Content Include="images\negado_r7_c22.gif" />
+    <Content Include="images\negado_r8_c2.gif" />
+    <Content Include="images\negado_r9_c1.gif" />
+    <Content Include="images\negado_r9_c13.gif" />
+    <Content Include="images\negado_r9_c18.gif" />
+    <Content Include="images\negado_r9_c21.gif" />
+    <Content Include="images\negado_r9_c4.gif" />
+    <Content Include="images\negado_r9_c8.gif" />
+    <Content Include="images\negado_r9_c9.gif" />
+    <Content Include="MasterNegado.master" />
     <Content Include="images\tema_r10_c1.gif" />
     <Content Include="images\tema_r10_c21.gif" />
     <Content Include="images\tema_r10_c3.gif" />
