--- a/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
+++ b/LeComCre.Web/LeComCre.Web/LeComCre.Web.csproj
@@ -417,6 +417,7 @@
     <None Include="Diagram\web.cd" />
     <Content Include="images\acessibilidade_r9_c1.gif" />
     <Content Include="images\acessibilidade_r9_c4.gif" />
+    <Content Include="images\Imprimir.gif" />
     <Content Include="MasterAcessebilidade.master" />
     <Content Include="Anuncie.aspx" />
     <Content Include="images\anuncie_r10_c1.gif" />
